k8s/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-service
  template:
    metadata:
      labels:
        app: customer-service
    spec:
      containers:
      - env:
        image: brick777/customer:latest
        imagePullPolicy: IfNotPresent
        name: customer-service
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
          - containerPort: 8080
            name: port-dep
