k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - env:
        - name: SPRING_CLOUD_KUBERNETES_ENABLED
          value: "true"
        - name: SPRING_CLOUD_KUBERNETES_RELOAD_ENABLED
          value: "false"
        - name: "logging.level.org.springframework.cloud.kubernetes"
          value: "TRACE"
        image: brick777/gateway-service:latest
        imagePullPolicy: IfNotPresent
        name: gateway
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        ports:
          - containerPort: 8082
            name: port-dep
