k8s/customer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: customer-service
  name: customer-service
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - port: 3000
      targetPort: 8080
      protocol: TCP
      name: port-srv
