k8s/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: gateway
  name: gateway
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: port-srv
      port: 8080
      targetPort: 8082
