k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: pawel.test
      http:
        paths:
          - path: /.*
            pathType: Prefix
            backend:
              service:
                name: gateway
                port: 
                  number: 8080
